--- a/app/templates/templates/template.html
+++ b/app/templates/templates/template.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <link rel="shortcut icon" type="image/png" href="/static/img/favicon.png"/>
   {% block style %}{% endblock %}
 
   <title>{% block title %}{% endblock %}</title>
